# Chronos

./: .gitignore  README.md  pyproject.toml
chronos.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
pipeline/: __main__.py  chronos.py  cli.py  ingest.py  normalize.py
pipeline/chronos_output/test01/: test01_manifest.json  test01_results.json
pipeline/enrich/: mitre_registry_mapping.py
pipeline/normalizers/: __init__.py  disk_normalizer.py  mft_normalizer.py  prefetch_normalizer.py  registry_normalizer.py
pipeline/parsers/: __init__.py  ntuser_persistence_custom.py  registry.py
pipeline/tests/: test_registry.py
pipeline/utils/: detect.py  evidence.py  hashing.py  manifest.py  mitre_mapping.py  size.py
