[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chronos"
version = "0.1.0"
description = "Artifact Pipeline Platform for automated forensic analysis"
authors = [{ name = "Chronos Team", email = "team@chronos.dfir" }]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "typer[all]>=0.9.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # Task processing
    "celery>=5.3.0",
    "redis>=5.0.0",
    "dramatiq>=1.15.0",
    
    # Data processing
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "pyarrow>=14.0.0",
    "duckdb>=0.9.0",
    "sqlalchemy>=2.0.0",
    
    # Forensic parsing
    "python-registry>=1.3.0",
    "python-evtx>=0.8.0",
    "python-magic>=0.4.27",
    "pefile>=2023.2.7",
    "yara-python>=4.3.0",
    
    # Specialized forensic tools
    "analyzemft>=3.0.0",
    "regipy>=2.9.0",
    
    # Network and cloud
    "boto3>=1.34.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    
    # Utilities
    "rich>=13.7.0",
    "click>=8.1.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
]

# CLI entrypoint
[project.scripts]
chronos = "pipeline.chronos:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline*"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
